src/objects/Address_Component__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>StreetLine1__c + BR() + 
If(StreetLine2__c =&apos;&apos;, &apos;&apos;,StreetLine2__c + BR()) + 
If(StreetLine3__c =&apos;&apos;, &apos;&apos;,StreetLine3__c + BR()) + 
If(StreetLine4__c =&apos;&apos;, &apos;&apos;,StreetLine4__c + BR()) + 
City__c + BR() +
TEXT(State__c) + BR() + 
TEXT(Country__c) +BR()+ 
PostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeoCodeAccuracy__c</fullName>
        <label>Geo Code Accuracy</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal/Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Picklist State field to replace text state field</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StreetLine1__c</fullName>
        <label>Street Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetLine2__c</fullName>
        <label>Street Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetLine3__c</fullName>
        <label>Street Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address Component</label>
    <nameField>
        <label>Address Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>